--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,4 +1,4 @@
-com.github.nosan.embedded.cassandra.cql-scripts=schema.cql
+com.github.nosan.embedded.cassandra.cql-scripts=classpath:schema.cql
 spring.data.cassandra.schema-action=create_if_not_exists
 spring.data.cassandra.keyspace-name=test
 spring.data.cassandra.port=${embedded.cassandra.port}
